# spoiler-alert

./: README.md
backend/: pyproject.toml  tutorial.txt
backend/app/: database.py  main.py
backend/app/routers/: gemini.py  identifyDate.py  identifyProduct.py  items.py  openfoodfacts.py  profiles.py  recipes.py
frontend/spoiler-alert/: app.json  package-lock.json  package.json  tsconfig.json
frontend/spoiler-alert/app/: _layout.jsx
frontend/spoiler-alert/app/(tabs)/: _layout.jsx  fridge.jsx  fridge.tsx  index.jsx  index.tsx  profile.jsx  recipes.jsx  recipes.tsx
frontend/spoiler-alert/app/assets/styles/: add.item.style.tsx  home.style.tsx
frontend/spoiler-alert/app/components/: addItem.tsx  addPhoto.tsx  foodData.tsx
supabase/: .gitignore  config.toml
supabase/migrations/: 20260318114425_init_schema.sql  20260415182326_update.sql  20260724071854_recipe_gen.sql  20260724072030_add_preferences_to_profiles.sql
supabase/seeds/: categories.sql  items.sql
